rename flex gap util, fix fg/secondary color

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 :root {
-  --background-color: #ddefff;
+  --background-color: #ecf8ff;
   --foreground-color: #ffffff;
 
   --text-color: #000000;
@@ -17,7 +17,7 @@
   --primary-color: #0087ff;
   --primary-color-alt: #ffffff;
 
-  --secondary-color: var(--background-color);
+  --secondary-color: #ddefff;
   --secondary-color-alt: var(--primary-color);
 
   --danger-color: #ff4848;
